将注册中心改为 zookeeper 将配置中心也设置为了 zookeeper，这个目前还没测试 PS: 使用了curator-framework 4.2.0，但是我试验环境安装的 Zookeeper 的版本是 3.4.10，而 4.2.0 的 curator-framework 下依赖的 zookeeper 为 3.5.x，所以我在 maven 中 exclusion 了 zookeeper，然后单独依赖了 3.4.x 的 zookeeper。

--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -1,3 +1,5 @@
 dubbo.application.name=consumer
-dubbo.registry.address=multicast://225.1.2.3:7777
+#dubbo.registry.address=multicast://225.1.2.3:7777
+dubbo.registry.address=zookeeper://0.0.0.0:2181
+dubbo.config-center.address=zookeeper://0.0.0.0:2181
 dubbo.consumer.timeout=3000
