--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -1,5 +1,11 @@
 dubbo.application.name=consumer
 #dubbo.registry.address=multicast://225.1.2.3:7777
 dubbo.registry.address=zookeeper://0.0.0.0:2181
-dubbo.config-center.address=zookeeper://0.0.0.0:2181
-dubbo.consumer.timeout=3000
+# 设置无效且意义不明
+#dubbo.registry.check=false
+#dubbo.config-center.address=zookeeper://0.0.0.0:2181
+#dubbo.consumer.timeout=3000
+# 设置无效
+#dubbo.reference.check=false
+#设置有效
+dubbo.consumer.check=false
