--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>${java.encoding}</encoding>
                     <compilerArguments>
                         <extdirs>lib</extdirs>
